[gd_scene load_steps=29 format=3 uid="uid://buwh2yn5q1toj"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_jola0"]
[ext_resource type="Script" path="res://scenes/Background.gd" id="2_7cguq"]
[ext_resource type="Theme" uid="uid://c2afictisxtqn" path="res://custom_theme.tres" id="2_jj6rf"]
[ext_resource type="Script" path="res://scenes/MainMenu.gd" id="2_tou4j"]
[ext_resource type="FontFile" uid="uid://s1msfpxvl0nl" path="res://fonts/NotoSansJP-Regular.otf" id="3_6c6dm"]
[ext_resource type="Script" path="res://scenes/Quiz.gd" id="3_6h7i5"]
[ext_resource type="Texture2D" uid="uid://dedkua7ughtsw" path="res://sprites/volume-high-solid.png" id="4_4d4df"]
[ext_resource type="Texture2D" uid="uid://dyx5tabvrkml4" path="res://sprites/check-mark.png" id="4_j456j"]
[ext_resource type="Texture2D" uid="uid://r5ru0o7pkdkd" path="res://sprites/xmark.png" id="5_b0tcf"]
[ext_resource type="Script" path="res://scenes/SFXToggleButton.gd" id="5_pdest"]
[ext_resource type="Texture2D" uid="uid://ckagskq3dneu3" path="res://sprites/volume-xmark-solid.png" id="6_43fns"]
[ext_resource type="Script" path="res://scenes/DialogueContainer.gd" id="6_rsp3t"]
[ext_resource type="Script" path="res://scenes/Results.gd" id="8_w6wk8"]
[ext_resource type="AudioStream" uid="uid://c3uw8m6vffb8n" path="res://sfx/sfxPop.mp3" id="10_l7c3w"]
[ext_resource type="Script" path="res://scenes/ButtonClickSFX.gd" id="11_gpadv"]
[ext_resource type="AudioStream" uid="uid://c34e83p7htrdd" path="res://sfx/sfxPass.mp3" id="16_xlq4n"]
[ext_resource type="AudioStream" uid="uid://bn31ncv6ixoud" path="res://sfx/sfxFail.mp3" id="17_7wbnl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nmn2s"]
content_margin_left = 64.0
content_margin_top = 24.0
content_margin_right = 64.0
content_margin_bottom = 24.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d8868"]
content_margin_left = 64.0
content_margin_top = 16.0
content_margin_right = 64.0
content_margin_bottom = 16.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oo3kl"]
content_margin_left = 32.0
content_margin_top = 8.0
content_margin_right = 32.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vfuk5"]
content_margin_left = 16.0
content_margin_top = 32.0
content_margin_right = 16.0
content_margin_bottom = 32.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uj03p"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kaopn"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.545098, 0.807843, 0.243137, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ncx5"]
bg_color = Color(0.48166, 0.714251, 0.216657, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_blak8"]
bg_color = Color(0.301961, 0.45098, 0.129412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wnluk"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(1, 0.301961, 0.227451, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wbi53"]
bg_color = Color(0.921569, 0.215686, 0.164706, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0q6qo"]
bg_color = Color(0.670588, 0.109804, 0.0823529, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Main" type="Node2D"]
script = ExtResource("1_jola0")

[node name="ButtonClickSFX" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_l7c3w")
max_polyphony = 6
panning_strength = 0.5
bus = &"SFX"
script = ExtResource("11_gpadv")

[node name="QuestionPassSFX" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("16_xlq4n")
volume_db = -2.0
bus = &"SFX"

[node name="QuestionFailSFX" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("17_7wbnl")
volume_db = -2.0
bus = &"SFX"

[node name="Background" type="Polygon2D" parent="."]
color = Color(1, 0.729412, 0.823529, 1)
polygon = PackedVector2Array(0, 0, 0, 800, 1000, 800, 1000, 0)
script = ExtResource("2_7cguq")
metadata/_edit_lock_ = true

[node name="FlowerSpawnTimer" type="Timer" parent="Background"]
unique_name_in_owner = true
wait_time = 4.0
autostart = true

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1000.0
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("2_tou4j")

[node name="MenuContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jj6rf")
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="MenuVBox" type="VBoxContainer" parent="MainMenu/MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 48

[node name="TitleLabel" type="Label" parent="MainMenu/MenuContainer/MenuVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 48
theme_override_font_sizes/font_size = 144
text = "KANJI QUIZ"
horizontal_alignment = 1
vertical_alignment = 2

[node name="RangeHBox" type="HBoxContainer" parent="MainMenu/MenuContainer/MenuVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="FromHBox" type="HBoxContainer" parent="MainMenu/MenuContainer/MenuVBox/RangeHBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="FromLabel" type="Label" parent="MainMenu/MenuContainer/MenuVBox/RangeHBox/FromHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "FROM
"

[node name="FromSpinBox" type="SpinBox" parent="MainMenu/MenuContainer/MenuVBox/RangeHBox/FromHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 2200.0
value = 1.0
rounded = true

[node name="ToHBox" type="HBoxContainer" parent="MainMenu/MenuContainer/MenuVBox/RangeHBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="ToLabel" type="Label" parent="MainMenu/MenuContainer/MenuVBox/RangeHBox/ToHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "TO
"

[node name="ToSpinBox" type="SpinBox" parent="MainMenu/MenuContainer/MenuVBox/RangeHBox/ToHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 2200.0
value = 2200.0
rounded = true

[node name="QuestionsHBox" type="HBoxContainer" parent="MainMenu/MenuContainer/MenuVBox/RangeHBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="QuestionsSpinBox" type="SpinBox" parent="MainMenu/MenuContainer/MenuVBox/RangeHBox/QuestionsHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 2200.0
value = 100.0
rounded = true
alignment = 2
update_on_text_changed = true

[node name="QuestionsLabel" type="Label" parent="MainMenu/MenuContainer/MenuVBox/RangeHBox/QuestionsHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "QUESTIONS"

[node name="StartButton" type="Button" parent="MainMenu/MenuContainer/MenuVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_nmn2s")
text = "START"
icon_alignment = 1
text_direction = 1

[node name="QuitButton" type="Button" parent="MainMenu/MenuContainer/MenuVBox"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_d8868")
text = "QUIT"

[node name="SFXToggleButton" type="Button" parent="MainMenu/MenuContainer"]
custom_minimum_size = Vector2(102, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
button_pressed = true
icon = ExtResource("4_4d4df")
icon_alignment = 1
script = ExtResource("5_pdest")
SFXOnTexture = ExtResource("4_4d4df")
SFXOffTexture = ExtResource("6_43fns")

[node name="FullscreenButton" type="Button" parent="MainMenu/MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
toggle_mode = true
text = "FULLSCREEN"

[node name="Quiz" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1000.0
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_6h7i5")

[node name="QuizContainer" type="MarginContainer" parent="Quiz"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="QuizVBox" type="VBoxContainer" parent="Quiz/QuizContainer"]
layout_mode = 2
theme = ExtResource("2_jj6rf")

[node name="HeaderHBox" type="HBoxContainer" parent="Quiz/QuizContainer/QuizVBox"]
layout_mode = 2

[node name="StatsHBox" type="HBoxContainer" parent="Quiz/QuizContainer/QuizVBox/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="CurrentQuestionLabel" type="Label" parent="Quiz/QuizContainer/QuizVBox/HeaderHBox/StatsHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "QUESTION: 1/2200"

[node name="TimeLabel" type="Label" parent="Quiz/QuizContainer/QuizVBox/HeaderHBox/StatsHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "GRADE: 100%"

[node name="ResetButton" type="Button" parent="Quiz/QuizContainer/QuizVBox/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_oo3kl")
text = "RESET"

[node name="QuestionLabel" type="Label" parent="Quiz/QuizContainer/QuizVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6c6dm")
theme_override_font_sizes/font_size = 300
text = "海"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnswerButtonGrid" type="GridContainer" parent="Quiz/QuizContainer/QuizVBox"]
custom_minimum_size = Vector2(936, 0)
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 2

[node name="AnswerButton1" type="Button" parent="Quiz/QuizContainer/QuizVBox/AnswerButtonGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_vfuk5")
text = "COME APART AT THE SEAMS"

[node name="KeyHintContainer" type="MarginContainer" parent="Quiz/QuizContainer/QuizVBox/AnswerButtonGrid/AnswerButton1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="KeyHintLabel" type="Label" parent="Quiz/QuizContainer/QuizVBox/AnswerButtonGrid/AnswerButton1/KeyHintContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.176471, 0.32549, 1)
theme_override_font_sizes/font_size = 20
text = "1/A"

[node name="AnswerButton2" type="Button" parent="Quiz/QuizContainer/QuizVBox/AnswerButtonGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_vfuk5")
text = "OPEN SEA"

[node name="KeyHintContainer" type="MarginContainer" parent="Quiz/QuizContainer/QuizVBox/AnswerButtonGrid/AnswerButton2"]
layout_mode = 1
offset_right = 54.0
offset_bottom = 45.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="KeyHintLabel" type="Label" parent="Quiz/QuizContainer/QuizVBox/AnswerButtonGrid/AnswerButton2/KeyHintContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.176471, 0.32549, 1)
theme_override_font_sizes/font_size = 20
text = "2/S"

[node name="AnswerButton3" type="Button" parent="Quiz/QuizContainer/QuizVBox/AnswerButtonGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_vfuk5")
text = "SIGN OF THE HARE"

[node name="KeyHintContainer" type="MarginContainer" parent="Quiz/QuizContainer/QuizVBox/AnswerButtonGrid/AnswerButton3"]
layout_mode = 1
offset_right = 54.0
offset_bottom = 45.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="KeyHintLabel" type="Label" parent="Quiz/QuizContainer/QuizVBox/AnswerButtonGrid/AnswerButton3/KeyHintContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.176471, 0.32549, 1)
theme_override_font_sizes/font_size = 20
text = "3/Z"

[node name="AnswerButton4" type="Button" parent="Quiz/QuizContainer/QuizVBox/AnswerButtonGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_vfuk5")
text = "SEA"

[node name="KeyHintContainer" type="MarginContainer" parent="Quiz/QuizContainer/QuizVBox/AnswerButtonGrid/AnswerButton4"]
layout_mode = 1
offset_right = 54.0
offset_bottom = 45.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="KeyHintLabel" type="Label" parent="Quiz/QuizContainer/QuizVBox/AnswerButtonGrid/AnswerButton4/KeyHintContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.176471, 0.32549, 1)
theme_override_font_sizes/font_size = 20
text = "4/X"

[node name="FeedbackContainer" type="MarginContainer" parent="Quiz"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jj6rf")
theme_override_constants/margin_left = 228
theme_override_constants/margin_top = 196
theme_override_constants/margin_right = 228
theme_override_constants/margin_bottom = 196

[node name="FeedbackPanel" type="Panel" parent="Quiz/FeedbackContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uj03p")

[node name="FeedbackVBox" type="VBoxContainer" parent="Quiz/FeedbackContainer/FeedbackPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -116.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="KeywordContainer" type="MarginContainer" parent="Quiz/FeedbackContainer/FeedbackPanel/FeedbackVBox"]
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="KeywordLabel" type="Label" parent="Quiz/FeedbackContainer/FeedbackPanel/FeedbackVBox/KeywordContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "COME APART AT THE SEAMS"
horizontal_alignment = 1

[node name="IconContainer" type="MarginContainer" parent="Quiz/FeedbackContainer/FeedbackPanel/FeedbackVBox"]
layout_mode = 2
theme_override_constants/margin_left = 144
theme_override_constants/margin_right = 144

[node name="SuccessRect" type="TextureRect" parent="Quiz/FeedbackContainer/FeedbackPanel/FeedbackVBox/IconContainer"]
unique_name_in_owner = true
modulate = Color(0.545098, 0.807843, 0.243137, 1)
layout_mode = 2
texture = ExtResource("4_j456j")
expand_mode = 5

[node name="FailRect" type="TextureRect" parent="Quiz/FeedbackContainer/FeedbackPanel/FeedbackVBox/IconContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 0.301961, 0.227451, 1)
layout_mode = 2
texture = ExtResource("5_b0tcf")
expand_mode = 5

[node name="DialogueContainer" type="MarginContainer" parent="Quiz"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jj6rf")
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 256
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 256
script = ExtResource("6_rsp3t")

[node name="DialoguePanel" type="Panel" parent="Quiz/DialogueContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uj03p")

[node name="DialogueVBox" type="VBoxContainer" parent="Quiz/DialogueContainer/DialoguePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -74.5
offset_right = 340.0
offset_bottom = 74.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="DialogueLabel" type="Label" parent="Quiz/DialogueContainer/DialoguePanel/DialogueVBox"]
layout_mode = 2
text = "ARE YOU SURE YOU WANT TO QUIT?"
horizontal_alignment = 1

[node name="ButtonHBox" type="HBoxContainer" parent="Quiz/DialogueContainer/DialoguePanel/DialogueVBox"]
layout_mode = 2
size_flags_vertical = 6

[node name="YesButton" type="Button" parent="Quiz/DialogueContainer/DialoguePanel/DialogueVBox/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_kaopn")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ncx5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_blak8")
text = "YES"

[node name="NoButton" type="Button" parent="Quiz/DialogueContainer/DialoguePanel/DialogueVBox/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_wnluk")
theme_override_styles/hover = SubResource("StyleBoxFlat_wbi53")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0q6qo")
text = "NO
"

[node name="NextQuestionDelay" type="Timer" parent="Quiz"]
unique_name_in_owner = true
wait_time = 0.67
one_shot = true

[node name="Results" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 800.0
script = ExtResource("8_w6wk8")

[node name="ResultsContainer" type="MarginContainer" parent="Results"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jj6rf")
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="ResultsVBox" type="VBoxContainer" parent="Results/ResultsContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 48

[node name="CompleteLabel" type="Label" parent="Results/ResultsContainer/ResultsVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 48
theme_override_font_sizes/font_size = 144
text = "FINISHED!"
horizontal_alignment = 1
vertical_alignment = 2

[node name="StatsHBox" type="HBoxContainer" parent="Results/ResultsContainer/ResultsVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 32

[node name="FinalCorrectLabel" type="Label" parent="Results/ResultsContainer/ResultsVBox/StatsHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "CORRECT ANSWERS: 2200/2200 (100%)"
horizontal_alignment = 1

[node name="FinalTimeLabel" type="Label" parent="Results/ResultsContainer/ResultsVBox/StatsHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "TIME: 00:00"
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="Results/ResultsContainer/ResultsVBox"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_nmn2s")
text = "MAIN MENU"

[connection signal="finished" from="ButtonClickSFX" to="ButtonClickSFX" method="_on_finished"]
[connection signal="timeout" from="Background/FlowerSpawnTimer" to="Background" method="_on_spawn_timer_timeout"]
[connection signal="start_quiz" from="MainMenu" to="." method="_on_main_menu_start_quiz"]
[connection signal="value_changed" from="MainMenu/MenuContainer/MenuVBox/RangeHBox/FromHBox/FromSpinBox" to="MainMenu" method="_on_from_spin_box_value_changed"]
[connection signal="value_changed" from="MainMenu/MenuContainer/MenuVBox/RangeHBox/ToHBox/ToSpinBox" to="MainMenu" method="_on_to_spin_box_value_changed"]
[connection signal="value_changed" from="MainMenu/MenuContainer/MenuVBox/RangeHBox/QuestionsHBox/QuestionsSpinBox" to="MainMenu" method="_on_questions_spin_box_value_changed"]
[connection signal="pressed" from="MainMenu/MenuContainer/MenuVBox/StartButton" to="MainMenu" method="_on_start_button_pressed"]
[connection signal="pressed" from="MainMenu/MenuContainer/MenuVBox/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="toggled" from="MainMenu/MenuContainer/SFXToggleButton" to="MainMenu/MenuContainer/SFXToggleButton" method="_on_toggled"]
[connection signal="toggled_off" from="MainMenu/MenuContainer/SFXToggleButton" to="." method="_on_sfx_toggle_button_toggled_off"]
[connection signal="toggled_on" from="MainMenu/MenuContainer/SFXToggleButton" to="." method="_on_sfx_toggle_button_toggled_on"]
[connection signal="pressed" from="MainMenu/MenuContainer/FullscreenButton" to="." method="_on_fullscreen_button_pressed"]
[connection signal="generate_quiz" from="Quiz" to="Quiz" method="_on_generate_quiz"]
[connection signal="update_question" from="Quiz" to="Quiz" method="_on_update_question"]
[connection signal="view_results" from="Quiz" to="." method="_on_quiz_view_results"]
[connection signal="pressed" from="Quiz/QuizContainer/QuizVBox/HeaderHBox/ResetButton" to="Quiz" method="_on_reset_button_pressed"]
[connection signal="pressed" from="Quiz/QuizContainer/QuizVBox/AnswerButtonGrid/AnswerButton1" to="Quiz" method="_on_answer_button_1_pressed"]
[connection signal="pressed" from="Quiz/QuizContainer/QuizVBox/AnswerButtonGrid/AnswerButton2" to="Quiz" method="_on_answer_button_2_pressed"]
[connection signal="pressed" from="Quiz/QuizContainer/QuizVBox/AnswerButtonGrid/AnswerButton3" to="Quiz" method="_on_answer_button_3_pressed"]
[connection signal="pressed" from="Quiz/QuizContainer/QuizVBox/AnswerButtonGrid/AnswerButton4" to="Quiz" method="_on_answer_button_4_pressed"]
[connection signal="pressed" from="Quiz/DialogueContainer/DialoguePanel/DialogueVBox/ButtonHBox/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="Quiz/DialogueContainer/DialoguePanel/DialogueVBox/ButtonHBox/YesButton" to="Quiz" method="_on_yes_button_pressed"]
[connection signal="pressed" from="Quiz/DialogueContainer/DialoguePanel/DialogueVBox/ButtonHBox/NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="Quiz/DialogueContainer/DialoguePanel/DialogueVBox/ButtonHBox/NoButton" to="Quiz/DialogueContainer" method="_on_no_button_pressed"]
[connection signal="timeout" from="Quiz/NextQuestionDelay" to="Quiz" method="_on_next_question_delay_timeout"]
[connection signal="update_results" from="Results" to="Results" method="_on_update_results"]
[connection signal="pressed" from="Results/ResultsContainer/ResultsVBox/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
